start work on slider

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<meta name="description" content="Центр террасной доски">
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="css/app.min.css?v=1">
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<script src="js/app.min.js" defer></script>
 
 </head>
@@ -26,25 +28,25 @@
 					</p>
 					<div class="header__contacts">
 						<div class="header__contacts--item">
-							<p class="header__contacts--number">
+							<a href="/" class="header__contacts--number">
 								+7 (981) 140-63-39
-							</p>
+							</a>
 							<p class="header__contacts--city">
 								Санкт-Петербург
 							</p>
 						</div>
 						<div class="header__contacts--item">
-							<p class="header__contacts--number">
+							<a href="/" class="header__contacts--number">
 								+7 (981) 140-63-50
-							</p>
+							</a>
 							<p class="header__contacts--city">
 								Санкт-Петербург
 							</p>
 						</div>
 						<div class="header__contacts--item">
-							<p class="header__contacts--number">
+							<a href="/" class="header__contacts--number">
 								+7 (903) 783-73-81
-							</p>
+							</a>
 							<p class="header__contacts--city">
 								Москва
 							</p>
@@ -137,7 +139,7 @@
 
 	<section class="services">
 		<div class="services__wrapper container">
-			<p class="services__title">Услуги</p>
+			<img src="img/services.png" class="services__title">
 			<div class="services__items">
 				<article class="services__content">
 					<div class="services__content--text">
@@ -148,7 +150,7 @@
 							на открытом воздухе настилов из натуральной древесины
 						</p>
 						<div class="services__content--info">
-							<a href="" class="services__content--button btn">Подробнее</a>
+							<a href="/" class="services__content--button btn">Подробнее</a>
 							<p class="services__content--price">от 1 650 руб./m<span>2</span></p>
 						</div>
 					</div>
@@ -156,6 +158,98 @@
 						<img src="img/terace-dpk.png" alt="Террасная доска из ДПК">
 					</div>
 				</article>
+				<article class="services__content">
+					<div class="services__content--text">
+						<h3 class="services__content--title">Монтажные работы</h3>
+						<p class="services__content--description">
+							Предлагаем готовые решения в сфере проектирования
+							террасных систем, входных групп, причалов, летних кафе,
+							открытых зон ресторанов и отелей, приусадебных участков
+							и котеждей.
+						</p>
+						<div class="services__content--info">
+							<a href="/" class="services__content--button btn">Подробнее</a>
+							<p class="services__content--price">от 750 руб./m<span>2</span></p>
+						</div>
+					</div>
+					<div class="services__content--image">
+						<img src="img/installation.png" alt="Монтажные работы">
+					</div>
+				</article>
+				<article class="services__content">
+					<div class="services__content--text">
+						<h3 class="services__content--title">Ограждения</h3>
+						<p class="services__content--description">
+							Завершающим элементом любой террасы или настила
+							является ограждение. Именно ограждения, перила и балясины
+							всегда на виду и первыми бросаются в глаза.      
+						</p>
+						<div class="services__content--info">
+							<a href="/" class="services__content--button btn">Подробнее</a>
+							<p class="services__content--price">от 2 500 руб./m<span>2</span></p>
+						</div>
+					</div>
+					<div class="services__content--image">
+						<img src="img/fencing.png" alt="Ограждения">
+					</div>
+				</article>
+				<article class="services__content">
+					<div class="services__content--text">
+						<h3 class="services__content--title">Безшовное покрытие</h3>
+						<p class="services__content--description">
+							Бесшовные покрытия из натурального камня или резиновой
+							крошки. Идельное решение для дорог, парковок, а так же
+							коттеджных поселков в качестве декоративного покрытия
+						</p>
+						<div class="services__content--info">
+							<a href="/" class="services__content--button btn">Подробнее</a>
+							<p class="services__content--price">от 750 руб./m<span>2</span></p>
+						</div>
+					</div>
+					<div class="services__content--image">
+						<img src="img/coating.png" alt="Безшовное покрытие">
+					</div>
+				</article>
+				<article class="services__content">
+					<div class="services__content--text">
+						<h3 class="services__content--title">фигуры из каучука</h3>
+						<p class="services__content--description">
+							Современные резиновые фигуры для детских площадок.
+							Универсальная установка на улице и в помещениях. Качественные 
+							безопасные материалы. Большой выбор моделей и размеров.
+						</p>
+						<div class="services__content--info">
+							<a href="/" class="services__content--button btn">Подробнее</a>
+							<p class="services__content--price">от 11 000 руб./m<span>2</span></p>
+						</div>
+					</div>
+					<div class="services__content--image">
+						<img src="img/rubber.png" alt="Фигуры из каучука">
+					</div>
+				</article>
+			</div>
+		</div>
+	</section>
+
+	<section class="portfolio">
+		<div class="portfolio__wrapper">
+			<div class="portfolio__top container">
+				<h3 class="portfolio__title"><span>Создаем комфорт</span> и уют</h3>
+				<a href="/" class="portfolio__button btn">Все проекты</a>
+			</div>
+			<div class="portfolio__slider owl-carousel owl-theme">
+				<div class="portfolio__slider--item item">
+					<img class="portfolio__slider--image" src="img/slider-item-1.png" alt="">
+				</div>
+				<div class="portfolio__slider--item item">
+					<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+				</div>
+				<div class="portfolio__slider--item item">
+					<img class="portfolio__slider--image" src="img/slider-item-3.png" alt="">
+				</div>
+				<div class="portfolio__slider--item item">
+					<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+				</div>
 			</div>
 		</div>
 	</section>
@@ -352,7 +446,8 @@
 			<p>Мы обязательно с вами свяжемся!</p>
 		</div>
 	</div> -->
-
+<script src="js/jquery.js"></script>
+<script src="js/owl.carousel.min.js"></script>
 </body>
 
 </html>
