--- a/index.html
+++ b/index.html
@@ -231,26 +231,165 @@
 		</div>
 	</section>
 
-	<section class="portfolio">
+	<!-- <section class="portfolio">
 		<div class="portfolio__wrapper">
 			<div class="portfolio__top container">
 				<h3 class="portfolio__title"><span>Создаем комфорт</span> и уют</h3>
 				<a href="/" class="portfolio__button btn">Все проекты</a>
 			</div>
-			<div class="portfolio__slider owl-carousel owl-theme">
-				<div class="portfolio__slider--item item">
-					<img class="portfolio__slider--image" src="img/slider-item-1.png" alt="">
+			<div class="portfolio__slider">
+				<!-- <div class="portfolio__slider--wrapper owl-carousel owl-theme container">
+					<div class="portfolio__slider--item item">
+						<img class="portfolio__slider--image" src="img/slider-item-1.png" alt="">
+					</div>
+					<div class="portfolio__slider--item item">
+						<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+					</div>
+					<div class="portfolio__slider--item item">
+						<img class="portfolio__slider--image" src="img/slider-item-3.png" alt="">
+					</div>
+					<div class="portfolio__slider--item item">
+						<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+					</div>
+				</div> -->
+				<!-- <div class="hero__slider container">
+					<!-- Additional required wrapper -->
+					<!-- <div class="swiper-wrapper"> -->
+					  <!-- Slides -->
+					  <!-- <div class="swiper-slide"> -->
+						<!-- <img src="img/slider-item-1.png" alt=""> -->
+					  <!-- </div> -->
+					  <!-- <div class="swiper-slide"> -->
+						<!-- <img src="img/slider-item-2.png" alt=""> -->
+					  <!-- </div> -->
+					  <!-- <div class="swiper-slide"> -->
+						<!-- <img src="img/slider-item-3.png" alt=""> -->
+					  <!-- </div> -->
+					  <!-- <div class="swiper-slide"> -->
+						<!-- <img src="img/slider-item-2.png" alt=""> -->
+					  <!-- </div> -->
+					  <!-- ... -->
+					<!-- </div> -->
+					<!-- If we need pagination -->
+					<!-- <div class="swiper-pagination"></div> -->
+				  
+					<!-- If we need navigation buttons -->
+					<!-- <div class="swiper-button-prev"></div> -->
+					<!-- <div class="swiper-button-next"></div> -->
+				  
+					<!-- If we need scrollbar -->
+					<!-- <div class="swiper-scrollbar"></div> -->
+				  <!-- </div> -->
+			<!-- </div> -->
+		<!-- </div> -->
+	<!-- </section> -->
+	<section class="turnkey">
+		<div class="turnkey__wrapper container">
+			<h2 class="turnkey__title">Предоставляем полный<br>перечень услуг <span>"под ключ"</span></h2>
+			<p class="turnkey__subtitle">Умеем делать все - от разработки дизайна до реализации (монтажа и шеф-монтажа),
+				и последующего контроля и обслуживания. 
+				</p>
+			<div class="turnkey__services">
+				<div class="turnkey__item">
+					<img src="img/delivery.png" alt="Доставка" class="turnkey__item--icon">
+					<p class="turnkey__item--title">Доставка</p>
+					<p class="turnkey__item--info">
+						Lorem ipsum dolor sit amet, consectetur adipiscing 
+						elit, sed do eiusmod tempor incididunt ut labore et dolore
+					</p>
 				</div>
-				<div class="portfolio__slider--item item">
-					<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+				<div class="turnkey__item">
+					<img src="img/drill.png" alt="Монтаж" class="turnkey__item--icon">
+					<p class="turnkey__item--title">Монтаж</p>
+					<p class="turnkey__item--info">
+						Lorem ipsum dolor sit amet, consectetur adipiscing 
+						elit, sed do eiusmod tempor incididunt ut labore et dolore
+					</p>
 				</div>
-				<div class="portfolio__slider--item item">
-					<img class="portfolio__slider--image" src="img/slider-item-3.png" alt="">
-				</div>
-				<div class="portfolio__slider--item item">
-					<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+				<div class="turnkey__item">
+					<img src="img/guarantee.png" alt="Гарантия" class="turnkey__item--icon">
+					<p class="turnkey__item--title">Гарантия</p>
+					<p class="turnkey__item--info">
+						Lorem ipsum dolor sit amet, consectetur adipiscing 
+						elit, sed do eiusmod tempor incididunt ut labore et dolore
+					</p>
 				</div>
 			</div>
+			<img src="img/boards.png" alt="" class="turnkey__boards">
+		</div>
+	</section>
+
+	<section class="sale">
+		<div class="sale__wrapper container">
+			<div class="sale__text-block">
+				<h2 class="sale__text-block--title"><span>Суперпредложение</span><br>от центра террасной<br>доски</h2>
+				<p class="sale__text-block--info">
+					Многим нашим клиентам не нужны просто
+					низкие цены. А нужно сочетание низких
+					цен и комфортных условий. Сервис.
+					Оперативность. Качество выполнения
+					услуг. <span>Мы предусмотрели ВСЕ!</span>
+				</p>
+			</div>
+			<div class="sale__item">
+				<div class="sale__item--info">
+					<h3 class="sale__item--title">Террасная доска «TREX»</h3>
+					<p class="sale__item--subtitle">пустотелая, облегченная, шовная</p>
+					<div class="sale__price-block">
+						<div class="sale__price-block--discount">
+							<p class="sale__price-block--old">1 950 руб./м<span>2</span></p>
+							<p class="sale__price-block--new">1 590 руб./м<span>2</span></p>
+						</div>
+						<div class="sale__price-block--benefit">
+							<p class="sale__price-block--text">Ваша выгода</p>
+							<p class="sale__price-block--value">360 руб./м<span>2</span></p>
+						</div>
+					</div>
+					<a href="/" class="sale__item--button btn">Подробнее о скидках и акциях</a>
+				</div>
+				<div class="sale__item--image">
+					<img src="img/board.png" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="partners">
+		<div class="partners__wrapper container">
+			<h2 class="partners__title">Работаем только с лучшими<br>производителями</h2>
+			<div class="partners__items">
+				<div class="partners__items--content">
+					<img src="img/derevoplast-grey.png" alt="Деревопласт">
+				</div>
+				<div class="partners__items--content">
+					<img src="img/basf.png" alt="Basf">
+				</div>
+				<div class="partners__items--content">
+					<img src="img/trex.png" alt="Trex">
+				</div>
+				<div class="partners__items--content">
+					<img src="img/deking-market.png" alt="Deking-market">
+				</div>
+				<div class="partners__items--content">
+					<img src="img/terra-pol.png" alt="Terra-pol">
+				</div>
+				<div class="partners__items--content">
+					<img src="img/lg.png" alt="LG Hausys">
+				</div>
+				<div class="partners__items--content">
+					<img src="img/rezipol.png" alt="РезиПол">
+				</div>
+				<div class="partners__items--content">
+					<img src="img/sequoia.png" alt="Sequoia">
+				</div>
+				<div class="partners__items--content">
+					<img src="img/huntsman.png" alt="Huntsman">
+				</div>
+				<div class="partners__items--content">
+					<img src="img/camonika.png" alt="Camonika">
+				</div>
+			</div>
+				<a href="/" class="partners__button btn">Подробнее о производителях</a>	
 		</div>
 	</section>
 
