added modal and fixes

--- a/performered.html
+++ b/performered.html
@@ -101,11 +101,38 @@
 		</nav>
 	</header>
 
-
 	<section class="performered">
 		<div class="performered__wrap container">
-			<h2>Выполненные работы</h2>
+			<div class="performered_list">
+				<div class="leftbar">
+					<div class="leftbar__header">
+						<p>Террасная доска</p>
+					</div>
+					<div class="leftbar__content">
+						<ul>
+							<li>Trex</li>
+							<li>Trex</li>
+							<li>Trex</li>
+							<li>Trex</li>
+						</ul>
+					</div>
+				</div>
+				<div class="leftbar">
+					<div class="leftbar__header">
+						<p>Террасная доска</p>
+					</div>
+					<div class="leftbar__content">
+						<ul>
+							<li>Trex</li>
+							<li>Trex</li>
+							<li>Trex</li>
+							<li>Trex</li>
+						</ul>
+					</div>
+				</div>
+			</div>
 			<div class="performered-tabs">
+				<h2>Выполненные работы</h2>
 				<ul class="performered-tabs__list">
 					<li class="performered-tabs__item">монтаж террасной доски</li>
 					<li class="performered-tabs__item">монтаж ограждений</li>
@@ -116,60 +143,72 @@
 						<div class="performered__wrapper">
 							<div class="performered-tabs__wrap-item">
 								<div class="performered__img">
-										<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
-									</div>	
-									<p>Террасы у дома в лесу</p>
+									<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+								</div>
+								<p>Террасы у дома в лесу</p>
 							</div>
 							<div class="performered-tabs__wrap-item">
 								<div class="performered__img">
-										<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
-									</div>	
-									<p>Террасы у дома в лесу</p>
+									<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+								</div>
+								<p>Террасы у дома в лесу</p>
 							</div>
+							<div class="performered-tabs__wrap-item">
+								<div class="performered__img">
+									<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+								</div>
+								<p>Террасы у дома в лесу</p>
+							</div>
+							<div class="performered-tabs__wrap-item">
+								<div class="performered__img">
+									<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+								</div>
+								<p>Террасы у дома в лесу</p>
+							</div>
+							<div class="performered-tabs__wrap-item">
+								<div class="performered__img">
+									<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+								</div>
+								<p>Террасы у дома в лесу</p>
+							</div>
+						</div>
 					</div>
-				</div>
-				<div class="performered-tabs__wrap">
-					<div class="performered__wrapper">
-					<div class="performered-tabs__wrap-item">
-						<div class="performered__img">
-								<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
-							</div>	
-							<p>Террасы у дома в лесу</p>
+					<div class="performered-tabs__wrap">
+						<div class="performered__wrapper">
+							<div class="performered-tabs__wrap-item">
+								<div class="performered__img">
+									<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+								</div>
+								<p>Террасы у дома в лесу</p>
+							</div>
+							<div class="performered-tabs__wrap-item">
+								<div class="performered__img">
+									<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+								</div>
+								<p>Террасы у дома в лесу</p>
+							</div>
+							<div class="performered-tabs__wrap-item">
+								<div class="performered__img">
+									<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+								</div>
+								<p>Террасы у дома в лесу</p>
+							</div>
+						</div>
 					</div>
-					<div class="performered-tabs__wrap-item">
-						<div class="performered__img">
-								<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
-							</div>	
-							<p>Террасы у дома в лесу</p>
+					<div class="performered-tabs__wrap">
+						<div class="performered__wrapper">
+							<div class="performered-tabs__wrap-item">
+								<div class="performered__img">
+									<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+								</div>
+								<p>Террасы у дома в лесу</p>
+							</div>
+						</div>
 					</div>
-					<div class="performered-tabs__wrap-item">
-						<div class="performered__img">
-								<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
-							</div>	
-							<p>Террасы у дома в лесу</p>
-					</div>
-				</div>
-			</div>
-			<div class="performered-tabs__wrap">
-				<div class="performered__wrapper">
-					<div class="performered-tabs__wrap-item">
-						<div class="performered__img">
-								<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
-							</div>	
-							<p>Террасы у дома в лесу</p>
-					</div>
+
 			</div>
 		</div>
-
-
-				</div>
-			</div>
-		</div>
-		
-
 	</section>
-
-
 
 	<footer class="footer">
 		<div class="footer__wrapper container">
