--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						</span>
 					</p>
 				</div>
-				<a class="header__button btn">Заказать звонок</a>
+				<a class="header__button btn modal__edits">Заказать звонок</a>
 				<button class="hamburger" type="button">
 					<span class="hamburger__item"></span>
 				</button>
@@ -118,7 +118,7 @@
 				</div>
 				<div class="about__illustration">
 					<div class="about__illustration--wrapper container">
-						<a href="/" class="about__anchor">
+						<a href="#services" class="about__anchor">
 							<span>листайте вниз</span>
 							<span class="about__anchor--arrow" ><img src="img/arrow-down.png" alt="Листай вниз"></span>
 						</a>
@@ -129,7 +129,7 @@
 				</div>
 		</section>
 	
-		<section class="services">
+		<section class="services" id="services">
 			<div class="services__wrapper container">
 				<img src="img/services.png" class="services__title" alt="">
 				<div class="services__items">
@@ -447,7 +447,36 @@
 
 	</main>
 
-	
+<!-- Modal -->
+
+<div class="modal" id="modal__edits">
+	<form action="#" class="modal__form form" method="POST">
+
+		<button class="close modal__close" type="button">
+			<span></span>
+			<span></span>
+		</button>
+
+		<h3 class="form__title">Заказать звонок</h3>
+
+		<input type="hidden" name="subject" value="Заказать звонок">
+
+		<div class="form__item">
+			<label for="formName" class="form__label">Ваше имя*</label>
+			<input id="formName" type="text" name="name" placeholder="Ваше имя" class="form__input _req">
+		</div>
+
+		<div class="form__item">
+			<label for="formPhone" class="form__label">Номер телефона*</label>
+			<input id="formPhone" type="tel" name="phone" placeholder="Номер телефона" class="form__input _req">
+		</div>
+
+		<div class="form__btn">
+			<button type="submit" class="btn form__btn_button" name="submit">Заказать звонок</button>
+		</div>
+
+	</form>
+</div>
 
 </body>
 
