--- a/performered.html
+++ b/performered.html
@@ -105,31 +105,69 @@
 		<div class="performered__wrap container">
 			<div class="performered_list">
 				<div class="leftbar">
-					<div class="leftbar__header">
-						<p>Террасная доска</p>
-					</div>
-					<div class="leftbar__content">
-						<ul>
-							<li>Trex</li>
-							<li>Trex</li>
-							<li>Trex</li>
-							<li>Trex</li>
-						</ul>
-					</div>
-				</div>
-				<div class="leftbar">
-					<div class="leftbar__header">
-						<p>Террасная доска</p>
-					</div>
-					<div class="leftbar__content">
-						<ul>
-							<li>Trex</li>
-							<li>Trex</li>
-							<li>Trex</li>
-							<li>Trex</li>
-						</ul>
-					</div>
-				</div>
+                    <div class="leftbar__header">
+                        <p>Террасная доска</p>
+                    </div>
+                    <div class="leftbar__content">
+                        <ul>
+                            <li><a>Trex</a></li>
+                            <li><a>Древопласт</a></li>
+                            <li><a>Woodvex</a></li>
+                            <li><a>Термодревесина</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="leftbar">
+                    <div class="leftbar__header">
+                        <p>Ограждения</p>
+                    </div>
+                    <div class="leftbar__content">
+                        <ul>
+                            <li><a>Trex</a></li>
+                            <li><a>Woodvex</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="leftbar">
+                    <div class="leftbar__header">
+                        <p>Безшовные покрытия</p>
+                    </div>
+                    <div class="leftbar__content">
+                        <ul>
+                            <li><a>Покрытия из резиновой крошки</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="leftbar-link">
+                    <div class="leftbar-link__header">
+                        <a><p>Фигуры из каучука</p></a>
+                    </div>
+                    <div class="leftbar__content">
+                        <ul>
+                            <li><a></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="leftbar-link">
+                    <div class="leftbar-link__header">
+                        <a><p>Скидки и акции</p></a>
+                    </div>
+                    <div class="leftbar__content">
+                        <ul>
+                            <li><a></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="leftbar-link">
+                    <div class="leftbar-link__header">
+                        <a><p>Монтаж</p></a>
+                    </div>
+                    <div class="leftbar__content">
+                        <ul>
+                            <li><a></a></li>
+                        </ul>
+                    </div>
+                </div>
 			</div>
 			<div class="performered-tabs">
 				<h2>Выполненные работы</h2>
@@ -143,33 +181,57 @@
 						<div class="performered__wrapper">
 							<div class="performered-tabs__wrap-item">
 								<div class="performered__img">
-									<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+									<img src="img/slider-item-1.png" alt="">
 								</div>
 								<p>Террасы у дома в лесу</p>
 							</div>
 							<div class="performered-tabs__wrap-item">
 								<div class="performered__img">
-									<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+									<img src="img/slider-item-2.png" alt="">
+								</div>
+								<p>Дизайнерский мост через реку</p>
+							</div>
+							<div class="performered-tabs__wrap-item">
+								<div class="performered__img">
+									<img src="img/slider-item-3.png" alt="">
+								</div>
+								<p>Террасы c дизайнерским решением</p>
+							</div>
+							<div class="performered-tabs__wrap-item">
+								<div class="performered__img">
+									<img src="img/slider-item-2.png" alt="">
+								</div>
+								<p>Террасный настил Trex</p>
+							</div>
+							<div class="performered-tabs__wrap-item">
+								<div class="performered__img">
+									<img src="img/slider-item-2.png" alt="">
+								</div>
+								<p>Терраса со ступенями и системой ограждения</p>
+							</div>
+							<div class="performered-tabs__wrap-item">
+								<div class="performered__img">
+									<img src="img/slider-item-2.png" alt="">
+								</div>
+								<p>Террасы, балконы, эксплуатируемая крыша</p>
+							</div>
+							<div class="performered-tabs__wrap-item">
+								<div class="performered__img">
+									<img src="img/slider-item-1.png" alt="">
 								</div>
 								<p>Террасы у дома в лесу</p>
 							</div>
 							<div class="performered-tabs__wrap-item">
 								<div class="performered__img">
-									<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+									<img src="img/slider-item-2.png" alt="">
 								</div>
-								<p>Террасы у дома в лесу</p>
+								<p>Дизайнерский мост через речку</p>
 							</div>
 							<div class="performered-tabs__wrap-item">
 								<div class="performered__img">
-									<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+									<img src="img/slider-item-3.png" alt="">
 								</div>
-								<p>Террасы у дома в лесу</p>
-							</div>
-							<div class="performered-tabs__wrap-item">
-								<div class="performered__img">
-									<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
-								</div>
-								<p>Террасы у дома в лесу</p>
+								<p>Террасы c дизайнерским решением</p>
 							</div>
 						</div>
 					</div>
@@ -177,21 +239,21 @@
 						<div class="performered__wrapper">
 							<div class="performered-tabs__wrap-item">
 								<div class="performered__img">
-									<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+									<img src="img/slider-item-2.png" alt="">
 								</div>
 								<p>Террасы у дома в лесу</p>
 							</div>
 							<div class="performered-tabs__wrap-item">
 								<div class="performered__img">
-									<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+									<img src="img/slider-item-2.png" alt="">
 								</div>
 								<p>Террасы у дома в лесу</p>
 							</div>
 							<div class="performered-tabs__wrap-item">
 								<div class="performered__img">
-									<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+									<img src="img/slider-item-2.png" alt="">
 								</div>
-								<p>Террасы у дома в лесу</p>
+								<p>Террасы c дизайнерским решением</p>
 							</div>
 						</div>
 					</div>
@@ -199,7 +261,7 @@
 						<div class="performered__wrapper">
 							<div class="performered-tabs__wrap-item">
 								<div class="performered__img">
-									<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+									<img src="img/slider-item-2.png" alt="">
 								</div>
 								<p>Террасы у дома в лесу</p>
 							</div>
@@ -207,6 +269,12 @@
 					</div>
 
 			</div>
+			<div class="performered__button--wrap">
+				<div class="performered__button">
+					<a href="/" class="performered__button--item btn">Показать еще</a>	
+				</div>
+			</div>
+			
 		</div>
 	</section>
 
